fixed about divs
so ids wouldn't repeat and changed them to classes

--- a/website/about/index.html
+++ b/website/about/index.html
@@ -39,8 +39,8 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 <body>
 
 	<!-- 	me af pics -->
-	<div id="box" class="me draggable">
-		<div id="header"><img src="!g/folder.png" class="folder"> me_irl<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+	<div class="me draggable">
+		<div class="header"><img src="!g/folder.png" class="folder"> me_irl<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in">
 				<marquee direction="left" scrollamount="9" behavior="alternate" onmouseover="this.stop();" onmouseout="this.start();">
@@ -66,8 +66,8 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 	</div>
 
 	<!-- 	about me -->
-	<div id="box" class="nostalgia draggable">
-		<div id="header"><img src="!g/folder.png" class="folder"> nostalgia<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+	<div class="nostalgia draggable">
+		<div class="header"><img src="!g/folder.png" class="folder"> nostalgia<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in">
 				<img title="these fucking DOGS" src="!g/nostalgia/the-dog-toys.jpg">
@@ -92,8 +92,8 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 	</div>
 
 	<!-- 	fav characters / fav charas -->
-	<div id="box" class="charas draggable">
-		<div id="header"><img src="!g/folder.png" class="folder"> fav_characters<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+	<div class="charas draggable">
+		<div class="header"><img src="!g/folder.png" class="folder"> fav_characters<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in">
 				<img title="power and meowy :3 from chainsaw man" src="!g/fav-charas/power.jpg" alt="power from chainsaw man">
@@ -117,8 +117,8 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 	</div>
 
 	<!-- 	toybox adopted fellas -->
-	<div id="box" class="toys draggable">
-		<div id="header"><img src="!g/folder.png" class="folder"> toybox<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+	<div class="toys draggable">
+		<div class="header"><img src="!g/folder.png" class="folder"> toybox<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 
@@ -178,28 +178,28 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 	</div>
 
 	<!-- 	interests linkes -->
-	<div id="box" class="dislikes draggable">
-		<div id="header">i_hate_u.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+	<div class="dislikes draggable">
+		<div class="header">i_hate_u.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding list">
-				<li>most spicy food...
-				<li>driving at night (with traffic)
-				<li>the puertorican government
-				<li>most old ppl here too
-				<li>nfts, AI shit, whatever cryptobros are up to
-				<li>coding JavaScript
+				<li>most spicy food...</li>
+				<li>driving at night (with traffic)</li>
+				<li>the puertorican government</li>
+				<li>most old ppl here too</li>
+				<li>nfts, AI shit, whatever cryptobros are up to</li>
+				<li>coding JavaScript</li>
 			</div>
 		</div>
 	</div>
 
 	<!-- 	interests linkes -->
-	<div id="box" class="likes draggable">
-		<div id="header">favs.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+	<div class="likes draggable">
+		<div class="header">favs.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding list">
 				<div class="title">general</div>
 				<li>petting cats</li>
-				<li>making lists</li>
+				<li>making lists / journaling</li>
 				<li>photography</li>
 				<li>art</li>
 				<li>horror</li>
@@ -242,6 +242,7 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 				<div class="title">animals</div>
 				<li>cats! :3</li>
 				<li>any felines really</li>
+				<li>but top 3 big cats: lynx, tigers, cheetahs</li>
 				<li>seals</li>
 			</div>
 		</div>
@@ -250,8 +251,8 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 
 
 	<!-- 	music video -->
-	<div id="box" class="mv draggable">
-		<div id="header">iyueni.mp4<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+	<div class="mv draggable">
+		<div class="header">iyueni.mp4<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in">
 				<iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/44L09CWyrsU" title="iyueni by parsley onuma" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -260,8 +261,8 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 	</div>
 
 	<!-- 	links -->
-	<div id="box" class="contact draggable">
-		<div id="header">links.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+	<div class="contact draggable">
+		<div class="header">links.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding list">
 				<img src="/!g/pix/buttermeadow.gif" style="position:absolute;bottom:20px;right:20px;pointer-events:none;width:55px;">
@@ -277,8 +278,8 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 		</div>
 	</div>
 
-	<div id="box" class="secret draggable">
-		<div id="header">secret.zip<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+	<div class="secret draggable">
+		<div class="header">secret.zip<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 				<img src="/collection/cats/!g/YOUVEBEENJESTERED.jpg" width="100%">
@@ -287,11 +288,11 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 	</div>
 
 	<!-- 	about me -->
-	<div id="box" class="about draggable">
-		<div id="header">about_the_webmaster_and_site.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+	<div class="about draggable">
+		<div class="header">about_the_webmaster_and_site.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
-				<p><img title="this is me btw" src="/!g/deco/sleeping-cat.gif" align="left" style="margin-right:5px;margin-top:-10px;" width="40%">hello everyone! i go by <mark>des</mark> and i am <mark>the webmaster of this site!</mark> i'm 23 year olds from a small island called puerto rico. i've lived here pretty much my entire life. gender is something i don't really care much about these days but i am nonbinary and go by any pronouns.</p>
+				<p><img title="this is me btw" src="/!g/deco/silly-cat.gif" align="left" style="margin-right:5px;" width="25%">hello everyone! i go by <mark>des</mark> and i am <mark>the webmaster of this site!</mark> i'm 23 year olds from a small island called puerto rico. i've lived here pretty much my entire life. gender is something i don't really care much about these days but i am nonbinary and go by any pronouns.</p>
 
 				<p><a title="art by bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/springflowers.gif" width="20%" align="right"></a>i find it extremely difficult to write about who i am. i'm not sure why. i would say i know myself pretty well. but when comes to things like this, i am pretty horrible at it. hopefully you can get an idea of who i am by exploring my site, which i pour a lot of myself and love into <img src="/!g/pix/catroll.gif"></p>
 
@@ -311,12 +312,12 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 	</div>
 
 	<!-- 	info pop up -->
-	<div id="box" class="pop-up draggable">
-		<div id="header">read_me.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+	<div class="pop-up draggable">
+		<div class="header">read_me.txt<img src="!g/close.jpg" class="himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="wrapper-in padding list">
 			<li>every window is draggable!</li>
-			<li>best viewed on a 1134px+ screen</li>
-			<li>this page is inspired by parsley onuma's iyueni and its music video</li>
+			<li>best viewed on a 1134px+ screen.</li>
+			<li>this page is inspired by parsley onuma's iyueni and its music video.</li>
 			<li>illustration by <a href="https://twitter.com/narumeNKR/status/1531955172074631171" target="_blank">narumeNKR</a></li>
 		</div>
 	</div>
