updated button wall

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -177,11 +177,12 @@
 			<a title="marcika - awesome little site who's youtube channel is very charming to watch! also love the webmaster's cat!" href="https://marcika.club/" target="_blank"><img src="!g/marcika.club.gif" alt="marcika.club"></a>
 			<a title="pp - i love their oc" href="https://churupan.neocities.org/" target="_blank"><img src="!g/churupan.gif" alt="churupan"></a>
 			<a title="dryad - cozy site" href="https://cyberneticdryad.neocities.org/" target="_blank"><img src="!g/cyberneticdryad.gif" alt="cyberneticdryad"></a>
-			<a title="telle - nice site with interesting logs!" href="https://catcakes.neocities.org/" target="_blank"><img src="!g/catcakes.gif" alt="catcakes" </a>
+			<a title="telle - nice site with interesting logs!" href="https://catcakes.neocities.org/" target="_blank"><img src="!g/catcakes.gif" alt="catcakes"></a>
+			<a title="kirsten - very minimalistic and nice site!" href="https://10kph.neocities.org/" target="_blank"><img src="!g/10kph.png" alt="10kph"></a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
-		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> / <a href="https://neet-elite.net/" target="_blank">neet-elite.net</a> / <a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> / <a href="https://pelagiczones.neocities.org/" target="_blank">pelagiczones</a> / <a href="https://bubbly.neocities.org/" target="_blank">bubbly</a> / <a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> / <a href="https://vickee.neocities.org" target="_blank">vickee</a> / <a title="very minimalistic and nice site!" href="https://10kph.neocities.org/" target="_blank">10kph</a> / <a title="one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/">2cherrish</a>
+		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> / <a href="https://neet-elite.net/" target="_blank">neet-elite.net</a> / <a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> / <a href="https://pelagiczones.neocities.org/" target="_blank">pelagiczones</a> / <a href="https://bubbly.neocities.org/" target="_blank">bubbly</a> / <a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> / <a href="https://vickee.neocities.org" target="_blank">vickee</a> / <a title="one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/">2cherrish</a>
 		</p>
 
 		<h3><img src="/!g/pix/icon_k_clover1.gif"> other cool sites</h3>
@@ -277,7 +278,7 @@
 		</div>
 
 		<h4 id="resources">resources / graphics</h4>
-		<div id="resources" class="neo">
+		<div class="neo">
 			<a title="has an INSANE library of free and CUTE stuff you can use on your site! from bgs, pixels, bullets, layouts, etc!" href="https://foollovers.com" target="_blank"><img src="!g/foolloversbanner.gif"></a>
 			<a title="an archive by cinni where they archive old websites! very good for finding previously lost graphics!" href="https://archive.cinni.net/index.php" target="_blank"><img src="!g/cutiearchive.gif"></a>
 			<a title="old web gifs" href="https://99gifshop.neocities.org" target="_blank"><img src="!g/99gifshop.png"></a>
@@ -300,7 +301,6 @@
 			<a title="pixels" href="https://lostsozai.tumblr.com" target="_blank"><img src="!g/lostsozai.gif"></a>
 			<a title="TONS web materials!" href="http://sozaiya405.chu.jp/" target="_blank"><img src="!g/sozaiya405.gif"></a>
 			<a title="make your own dream room!" href="https://dreamroom.uwu.ai" target="_blank"><img src="!g/dreamroom.gif"></a>
-			<a title="portuguese blog i found with tons but TONS of gifs, pixels, bgs, etc" href="https://cantinhoencantado.blogs.sapo.pt" target="_blank"><img src="!g/cantinhoencantado.gif"></a>
 			<a title="web materials!" href="https://fancyparts.com/index.html" target="_blank"><img src="!g/fancyparts.gif"></a>
 			<a title="pixels" href="https://pomelo.lol/pixel/home" target="_blank"><img src="https://i.ibb.co/0GD8CXT/pombttn.gif"></a>
 			<a title="have a pet on your site" href="https://gifypet.neocities.org" target="_blank"><img src="/sites/!g/gifypet.gif"></a>
@@ -308,12 +308,13 @@
 			<a href="https://scripted.neocities.org" target="_blank"><img src="https://scripted.neocities.org/SCRIPTED-BUTTON.gif" title="lots of cool codes for your site"></a>
 			<a title="site codes and templates" href="https://templaterr.neocities.org" target="_blank"><img src="/sites/!g/templaterr1.png"></a>
 			<a href="https://strawberry-gashes.neocities.org" title="strawberry gashes ♥" target="0"><img src="/sites/!g/strawberry-gashes.gif"></a>
-			<a title="archived site - cute pixel sets" href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html"><img src="/sites/!g/hydrangea-topcities.gif"></a>
 			<a title="cute and colorful site that offers free materials!" href="https://sweetcharm.net/" target="_blank"><img src="!g/sweetcharm.gif" alt="sweetcharm"></a>
 			<a title="has cute CAT themed FC2 blog templates, materials, and lots more! they also have linked other resource sites!" href="http://tora7.ciao.jp/" target="_blank"><img src="!g/tora7.gif" alt="tora7"></a>
 			<a title="joisu - their pixels are toybox are so cute :3" href="https://twicethepixels.neocities.org/" target="_blank"><img src="https://twicethepixels.neocities.org/site_images/TwiceThePixels-AniBanner-88x31-Hamtaro.gif" alt="twicethepixels"></a>
-			<a href="catstuff" href="https://user.xmission.com/~emailbox/catstuff.htm" target="_blank"><img src="!g/catstuff-xmission.gif"></a>
+			<a title="catstuff" href="https://user.xmission.com/~emailbox/catstuff.htm" target="_blank"><img src="!g/catstuff-xmission.gif"></a>
 		</div>
+		<a title="archived site - cute pixel sets" href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html"><img src="/sites/!g/hydrangea-topcities.gif" width="90px"></a>
+		<a title="portuguese blog i found with tons but TONS of gifs, pixels, bgs, etc" href="https://cantinhoencantado.blogs.sapo.pt" target="_blank"><img src="!g/cantinhoencantado.gif" width="90px"></a>
 
 		<h4 id="fun">for fun!</h4>
 		<div class="neo">
@@ -351,7 +352,7 @@
 	<div id="c" class="box">
 		page made with materials by <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya 405</a>
 		<br>
-		<a href="/home">go back home</a>
+		<a href="/home">go back home</a> / <a href="/sitemap">sitemap</a>
 	</div>
 
 	<div class="footer"></div>
