minor fixes / changes

--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -85,12 +85,9 @@
 
 		<div class="button">
 			<a title="have statuses on your blog!" href="https://status.cafe" target="_blank"><img src="/sites/!g/status.png"></a>
-
 			<a title="pixels" href="http://whimsical.heartette.net" target="_blank"><img src="/sites/!g/whimsical.gif"></a>
 			<a href="https://99gifshop.neocities.org" target="_blank"><img src="/sites/!g/99gifshop.png"></a>
 			<a title="decoration materials for websites!" href="https://foollovers.com/" target="_blank"><img src="/sites/!g/foolloversbanner.gif"></a>
-
-
 			<a title="nuko emoticons!" href="https://nukocities.neocities.org/" target="_blank"><img src="https://nukocities.neocities.org/img/nukocities.gif"></a>
 			<a title="tumblr blog with pixels, cute bgs, etc" href="http://engrampixel.tumblr.com" target="_blank"><img src="http://media.tumblr.com/tumblr_m5106aHKT11qid2nw.gif"></a>
 			<a title="pixels and toybox" href="https://sleepysprout.neocities.org/index1" target="_blank"><img src="/sites/!g/sleepysprout.png"></a>
@@ -175,6 +172,7 @@
 		<li><a href="https://virtualobserver.moe/ayano/comment-widget" target="_blank">comment widget</a> by ayano</li>
 		<li><a href="https://chattable.neocities.org/" target="_blank">chattable</a> - free and extremely customizable chatbox by <a href="https://xobyte.dev/" target="_blank">xobyte.dev</a></li>
 		<li><a href="https://surfing-waves.com/feed.htm" target="_blank">RSS feed widget</a></li>
+		<li><a href="https://rss.bloople.net/" target="_blank">RSS 2 HTML</a> - another great rss widget</li>
 		<li><a href="https://github.com/captbaritone/webamp" target="_blank">webamp</a> - music player / <a href="https://codepen.io/sadness97/pen/RwKbNWW?editors=1000" target="_blank">sadness' tutorial on codepen</a></li>
 
 		<h3 id="neat">neat codes</h3>
@@ -204,7 +202,7 @@
 
 		<a href="/notebook/F2U/templates" target="_blank">templates made by me!</a> /
 		<a href="https://neothemes.neocities.org/layouts/" target="_blank">neothemes</a> /
-		<a href="https://windchime.neocities.org/fountain/air/templates" target="_blank">windchime</a> / <a href="https://github.com/francelalune/neocities_layouts/tree/main" target="_blank">francelalune</a> / 
+		<a href="https://windchime.neocities.org/fountain/air/templates" target="_blank">windchime</a> / <a href="https://github.com/francelalune/neocities_layouts/tree/main" target="_blank">francelalune</a> /
 		<a title="templaterr" href="https://templaterr.neocities.org" target="_blank">templaterr</a> /
 		<a href="https://repth.neocities.org/theme" target="_blank">REPTH</a> /
 		<a href="https://teppyslayouts.neocities.org" target="_blank">teppy</a> /
@@ -259,9 +257,10 @@
 
 		<center><img src="/!g/div/scissors.gif"></center>
 
-		<h3 id="tumblr">tumblr blogs with graphics</h3>
+		<h3 id="tumblr">tumblr blogs with graphic collections</h3>
 
 		<li><a href="https://purinpixel.tumblr.com" target="_blank">purinpixel</a> - pixels, bgs, tags available</li>
+		<li><a href="https://fruchtgummi.tumblr.com" target="_blank">fruchtgummi</a> - favicons, tags available</li>
 		<li><a href="https://lostsozai.tumblr.com" target="_blank">lostsozai</a> - pixels of all sizes, dividers, gifs</li>
 		<li><a href="https://pixel-soup.tumblr.com" target="_blank">pixel-soup</a> - pixels of all sizes, bits of codes, tags available</li>
 
