--- a/website/vgs/index.html
+++ b/website/vgs/index.html
@@ -147,7 +147,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv cat fav adv finished single">
 			<a title="journey" href="journey/index.html" target="iframe_a"><img src="journey.jpg" class="vgimg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv fav notdone currently multi single">
+		<div class="filterDiv fav notdone multi single">
 			<a title="minecraft" href="minecraft/index.html" target="iframe_a"><img src="minecraft.jpg" class="vgimg" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished vn single">
@@ -186,7 +186,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv notdone horror single">
 			<a title="" href="2wip/index.html" target="iframe_a">fatum betula</a>
 		</div>
-		<div class="filterDiv notdone currently fav single">
+		<div class="filterDiv notdone fav single">
 			<a title="" href="2wip/index.html" target="iframe_a">yoshi's island</a>
 		</div>
 		<div class="filterDiv notdone puzzle single">
@@ -254,7 +254,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		</div>
 		<!-- 	wrapper end div -->
 	</div>
-	<div id="drifter"><a title="my meow meow drifter" href="hyper-light-drifter/index.html" target="iframe_a"><img src="/!g/deco/drifter.png" width="300px"></a></div>
+	<div id="drifter"><a title="my meow meow drifter" href="hld/index.html" target="iframe_a"><img src="/!g/deco/drifter.png" width="300px"></a></div>
 	<div id="home">
 		<a title="go back home" href="/home"><img src="/!g/deco/enderspin.gif" width="auto"></a>
 	</div>
