--- a/website/about/index.html
+++ b/website/about/index.html
@@ -71,6 +71,7 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 		<div class="borderwrap">
 			<div class="wrapper-in">
 				<img title="these fucking DOGS" src="!g/nostalgia/the-dog-toys.jpg">
+				<img src="!g/nostalgia/foopets.jpg">
 				<img title="girls go games" src="!g/nostalgia/girlsgogames.jpeg">
 				<img title="mp3 player i had in like errrrr 3rd grade or something" src="!g/nostalgia/sony-walkman.jpg" width="47%">
 				<img title="sister's gameboy color i would steal frequently" src="!g/nostalgia/my-sisters-gameboy.jpg" width="47%">
@@ -140,6 +141,7 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 
 				<a href="https://sleepysprout.neocities.org/index1" target="_blank"><img src="!g/adopted/catplant.png"><img src="!g/adopted/bun6.png"><img src="!g/adopted/cat5.png"><img src="!g/adopted/dog9.png"></a>
 
+				<a href="http://arielishungry.blogspot.com/" target="_blank"><img src="!g/adopted/arial-flyingcat.gif" alt=""></a>
 				<a href="https://artwork.neocities.org/" target="_blank"><img src="!g/adopted/chococatbyartwork.gif"></a>
 				<br>
 
