added new mail stamp to collection

--- a/website/collection/mail-stamps/index.html
+++ b/website/collection/mail-stamps/index.html
@@ -57,13 +57,14 @@ coded with love by des
 				<img src="!g/uk-queen.jpg" alt="the queen from england">
 			</div>
 			<div class="column">
+				<img src="!g/int-2020.png" alt="global stamp 2020">
 				<img src="!g/tomie-depaola.jpg" alt="stamp drawn by tomie dePaola">
 				<img src="!g/thank-u.jpg" alt="thank you written in cursive">
 			</div>
 		</div>
 
 		<footer>
-			<b>last updated on: 08.dec.23</b>
+			<b>last updated on: 07.jan.24</b>
 			<br>
 			<b>credit:</b> bg img by <a href="https://www.pexels.com/photo/brown-wooden-gate-and-green-leafed-tree-63743/" target="_blank">donald tong on pexels</a> / <a href="/notebook/links/fonts.html">fonts</a> used: simple, garden script.
 			<br>
