button wall updated

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -179,6 +179,7 @@
 			<a title="dryad - cozy site" href="https://cyberneticdryad.neocities.org/" target="_blank"><img src="!g/cyberneticdryad.gif" alt="cyberneticdryad"></a>
 			<a title="telle - nice site with interesting logs!" href="https://catcakes.neocities.org/" target="_blank"><img src="!g/catcakes.gif" alt="catcakes"></a>
 			<a title="kirsten - very minimalistic and nice site!" href="https://10kph.neocities.org/" target="_blank"><img src="!g/10kph.png" alt="10kph"></a>
+			<a title="jasmine - lovely on the eyes and i love how responsive it is!" href="https://jasm1nii.xyz/" target="_blank" rel="external"><img src="!g/jasm1nii.png" alt="jasmine's journal" style="outline: 1px solid gray; image-rendering: pixelated;" width="88" height="31"></a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
