--- a/website/music/kpop-producers.html
+++ b/website/music/kpop-producers.html
@@ -46,6 +46,7 @@
 
 		<h2>production teams</h2>
 		<p class="key">producers who have also worked on a song but aren't part of said production teams will be mentioned but not <b>bolded</b></p>
+
 		<h3>NEWTYPE</h3>
 		<p>my favorite production team! i can always trust them for a great electronic song. as far as i known they tend to compose songs that leans into heavy and layered electronic songs and in my opinion they are the best ones at delivering these types of songs!</p>
 		<p>their work as producers is mostly seen in the discographies of <a href="https://en.wikipedia.org/wiki/Woollim_Entertainment" target="_blank">woollim entertainment</a> artists. website: <a href="https://newtypeent.com/">newtypeent.com</a></p>
@@ -58,10 +59,10 @@
 			<li>Yukika's <a class="song" href="https://youtu.be/RIKTYUWQOcs" target="_blank">pit-a-pet</a> - <b>TAK</b>, seibin (ESTIMATE)</li>
 			<li>Rocket Punch's <a class="song" href="https://youtu.be/oAbhfMWvcZs" target="_blank">flash</a> - <b>TAK</b>, <b>Corbin</b>, <b>Beatie</b></li>
 			<li>Kwon Eunbi's <a class="song" href="https://youtu.be/enSvdtEutuw" target="_blank">glitch</a>, <a class="song" href="https://youtu.be/1wPz1XSvgPo" target="_blank">croquis</a> - <b>TAK</b>, <b>Corbin</b></li>
-
-
 			<li><b>TAK</b> x <b>Corbin</b>'s <a class="song" href="https://youtu.be/8vX66g94PSU" target="_blank">tic! tac! toe!</a></li>
+			<li><b>TAK</b>'s remix of qwer's <a class="song" href="https://youtu.be/MZ5lkYhm6xQ?si=O3uI82FDeYDMxPi-" target="_blank">discord</a></li>
 		</ul>
+
 		<h3>full8loom</h3>
 		<p>you know a song is gonna be good when it has that "AH AH!" (their producer tag!) in the intro / <a href="https://www.instagram.com/p/CSEY0kKF_cO/?hl=en">instagram</a></p>
 		<p><mark>highlighted producers: <b>영광의 얼굴들 (glory face), 진리 (jinli), HARRY</b></mark></p>
