updated button wall

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -245,6 +245,7 @@
 			<a href="https://www.snifflebear.moe/p/welcome.html" target="_blank"><img src="!g/snifflebear.png" alt="snifflebear.moe"></a>
 			<a href="https://ribo.zone/" target="_blank"><img src="!g/ribose.gif" alt="ribo.zone"></a>
 			<a title="such a cute site with lots of personality" href="https://eggsandmint.neocities.org" target="_blank"><img src="!g/eggsandmint.png" alt="eggsandmint"></a>
+			<a href="https://shrimpfriedeggs.neocities.org/"><img src="https://shrimpfriedeggs.neocities.org/art/mybutton.gif"></a>
 		</div>
 		<a href="https://mewmiu.blog.fc2.com"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
 
