--- a/website/home.html
+++ b/website/home.html
@@ -119,19 +119,20 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="/vgs/fashion-dreamer/">fashion dreamer</a>, <a href="/vgs/dog-island">the dog island</a></p>
+			<p><span class="hl">playing:</span> <a href="/vgs/fashion-dreamer/">fashion dreamer</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
 				fujimoto</p>
-			<p><span class="hl">watching:</span> the tatami galaxy</p>
+			<p><span class="hl">watching:</span> - </p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> florida trip journal log + college</p>
-			<p><span class="hl">coding:</span> - </p>
-			<p class="date">last updated on 05.jan.24</p>
+			<p><span class="hl">coding:</span> scrapbook</p>
+			<p class="date">last updated on 11.jan.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
-			<li>05.jan.24 - <a href="/journal">journal log:</a> back home! + new featured cat</li>
+			<li>11.jan.24 - <a href="/journal">journal log</a>: grandma</li>
+			<li>05.jan.24 - <a href="/journal">journal log</a>: back home! + new featured cat</li>
 			<li>25.dec.23 - finished my <a href="music/recaps/2023/index.html">music recap</a> of the year! this will be my last update of the year! happy holidays everyone <img src="!g/pix/crismas.gif" alt=""></li>
 			<li>22.dec.23 - <a href="/journal">journal log</a></li>
 		</div>
