--- a/website/notebook/sitely/graphics.html
+++ b/website/notebook/sitely/graphics.html
@@ -299,6 +299,9 @@
 		<a href="http://tora7.ciao.jp/" target="_blank"><img src="/!g/pix/tora-cat-holdingflower.gif"></a>
 		<a href="http://tora7.ciao.jp/" target="_blank"><img src="/!g/pix/tora-cat-holdingsunflower.gif"></a>
 		<img src="/!g/pix/sticky.gif">
+		<img src="/!g/pix/bouquet.gif">
+		<img src="/!g/pix/book3.gif">
+		<img src="/!g/pix/scissors6.gif">
 
 		<h3 id="tiny">tinnier</h3>
 
@@ -557,6 +560,7 @@
 		<img src="/!g/deco/sleepy-cats.gif">
 		<img src="/!g/deco/kitty-text.gif">
 		<img src="/!g/deco/kitty-basket.gif">
+		<img src="/!g/deco/silly-cat.gif">
 
 
 		<br>
@@ -673,6 +677,7 @@
 		<img src="/!g/deco/bench-flowers.gif">
 		<img src="/!g/deco/flowers.gif">
 		<img src="/!g/deco/flower%20108.gif">
+		<img src="/!g/deco/windmill.gif">
 
 
 		<h4>trees</h4>
