minor changed to journal

--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -88,8 +88,8 @@ palette url: https://coolors.co/c7d9f8-c9525e-e4a79d-fffcdc-a6ddff-d0ff8d-ffe481
 	<div id="wrapper2">
 
 		<div class="tab">
-			<button class="tablinks" onclick="openTab(event, 'fc2')" id="defaultOpen">microblog</button>
-			<button class="tablinks" onclick="openTab(event, 'status')">statuses</button>
+			<button class="tablinks" onclick="openTab(event, 'fc2')">microblog</button>
+			<button class="tablinks" onclick="openTab(event, 'status')" id="defaultOpen">statuses</button>
 
 		</div>
 
