--- a/website/home.html
+++ b/website/home.html
@@ -56,8 +56,8 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<a title="the webmaster and site!" href="/about"><img src="/!g/pix/cateepyy.gif" alt=""> about</a>
 			<a title="personal entries and site talk!" href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal</a>
 			<a title="rambling mode where i put in the effort to be as coherent as possible" href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog</a>
-			<a title="nonsense. mostly shorter entries" href="https://doqmeat.blog.fc2.com" class="outlink"><img src="/!g/pix/tora-clover.gif" alt=""> microblog</a>
 			<a title="WIP!" href="/art"><img src="/!g/pix/catdraw.gif" alt=""> art &amp; crafts</a>
+			<a href="/scrapbook"><img src="!g/pix/scissors6.gif" alt=""> scrapbook <img src="!g/pix/new1.gif"></a>
 			<a href="/photobook"><img src="/!g/pix/camera.gif" alt=""> photobook</a>
 			<a href="/shrines"><img src="/!g/pix/heart2.gif" alt=""> shrines</a>
 			<a href="/collection"><img src="/!g/pix/pics.gif" alt=""> collections</a>
@@ -131,6 +131,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>12.jan.24 - added <a href="/scrapbook">scrapbook</a> pages! <small>will be decorating it more in the future!</small></li>
 			<li>11.jan.24 - <a href="/journal">journal log</a>: grandma</li>
 			<li>05.jan.24 - <a href="/journal">journal log</a>: back home! + new featured cat</li>
 			<li>25.dec.23 - finished my <a href="music/recaps/2023/index.html">music recap</a> of the year! this will be my last update of the year! happy holidays everyone <img src="!g/pix/crismas.gif" alt=""></li>
