updated scrapbook CSS
added some more color to it + other minor fixes

--- a/website/scrapbook/index.html
+++ b/website/scrapbook/index.html
@@ -14,7 +14,31 @@
 
 	<style>
 		body {
-			background: url('/!g/bg/tora-thinkin.gif');
+			background: url('/notebook/!g/grid-blue.png');
+		}
+
+		h1 {
+			font-size: 50px;
+			margin-bottom: 40px;
+			text-decoration: none;
+			transition-duration: 0.5s;
+		}
+
+		h1:hover {
+			letter-spacing: 10px;
+		}
+
+		.page {
+			margin-top: 150px;
+			max-width: 900px;
+			background: transparent;
+			border: none;
+		}
+
+		footer {
+			background: rgb(236, 186, 208);
+			background: linear-gradient(90deg, rgba(236, 186, 208, 1) 0%, rgba(201, 220, 146, 1) 51%, rgba(141, 209, 241, 1) 100%);
+
 		}
 
 	</style>
@@ -22,13 +46,13 @@
 
 <body>
 	<div class="page">
-		<h1>scrapbook</h1>
+		<h1>des' scrapbook</h1>
 
 		<img src="/!g/deco/polaroid-pics.gif" align="right" alt="">
 
 		<p>inspired by <a href="https://bisuko.neocities.org/scrapbooks/2023" target="_blank">bisuko</a> and <a href="https://strawberry-gashes.neocities.org/sb23" target="_blank">strawberry-gashes</a>!</p>
 
-		<p>these will be pages dedicated to how my year is going, i will be updating it throughout the year frequently!</p>
+		<p>these will be pages dedicated to how my year is going, media consumed, etc. i will be updating it throughout the year frequently!</p>
 
 		<ul>
 			<li><a href="2024/index.html">2024</a></li>
