scrapbook index minor changes

--- a/website/scrapbook/index.html
+++ b/website/scrapbook/index.html
@@ -11,37 +11,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
-
-	<style>
-		body {
-			background: url('/notebook/!g/grid-blue.png');
-		}
-
-		h1 {
-			font-size: 50px;
-			margin-bottom: 40px;
-			text-decoration: none;
-			transition-duration: 0.5s;
-		}
-
-		h1:hover {
-			letter-spacing: 10px;
-		}
-
-		.page {
-			margin-top: 150px;
-			max-width: 900px;
-			background: transparent;
-			border: none;
-		}
-
-		footer {
-			background: rgb(236, 186, 208);
-			background: linear-gradient(90deg, rgba(236, 186, 208, 1) 0%, rgba(201, 220, 146, 1) 51%, rgba(141, 209, 241, 1) 100%);
-
-		}
-
-	</style>
 </head>
 
 <body>
@@ -57,7 +26,10 @@
 		<ul>
 			<li><a href="2024/index.html">2024</a></li>
 		</ul>
+		<center><img src="/!g/div/heart-string.gif" alt="divider"></center>
 	</div>
+
+	<div id="home"><a title="go back to homepage" href="/home"><img src="/!g/deco/paper-planes.gif" alt="link to homepage"></a></div>
 
 	<footer>
 		<b>credit:</b> body bg by <a href="http://tora7.ciao.jp/" target="_blank">tora7.ciao.jp</a>
