--- a/website/home.html
+++ b/website/home.html
@@ -92,7 +92,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 			<p>here's my <a class="outlink" href="https://doqmeat.123guestbook.com/">guestbook</a> if you'd like to write a little message <img src="!g/pix/cat-heart.gif"> every single message means a ton to me!</p>
 
-			<p>this website will probably be an <a title="to-do list!" href="/notebook/sitely/to-dos.html">endless work-in-progress</a> for quite a bit. meaning that i am <b>always</b> working on it and updating it. if anything looks broken, a quick cache clean should help! if not, then feel free to e-mail me.</p>
+			<p>this website will probably be an <a title="github issues" href="https://github.com/doqmeat/doqmeat.neocities.org/issues" target="_blank" class="outlink">endless work-in-progress</a> for quite a bit. meaning that i am <b>always</b> working on it and updating it. if anything looks broken, a quick cache clean should help! if not, then feel free to e-mail me.</p>
 
 			<center><a href="https://user.xmission.com/~emailbox/catstuff.htm" title="img source!"><img src="/collection/internet-stamps/!g/timecat.png" alt="button that reads 'no time spent with a cat is wasted'" width="30%"></a></center>
 
@@ -188,6 +188,9 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="webrings" class="box">
 			<h2>webrings &amp; widgets</h2>
+			<!--			journalring -->
+			<journal-ring icon="lavender"></journal-ring>
+			<script async src="https://cdn.jsdelivr.net/gh/js044/nenrikido@main/static/js/misc/journalring.js"></script>
 
 			<!-- wiiring -->
 			<div style="width:150px;margin:auto;">
