updated notebook's archive
- added a page for ... archived pages!
- removed to-do's and replaced it with git hub's issues

--- a/website/notebook/index.html
+++ b/website/notebook/index.html
@@ -107,7 +107,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 				<div class="left-in">
 					<p>this is the site related things tab</p>
 					<li><a href="/sitemap.html" target="iframe_b">sitemap</a></li>
-					<li><a href="sitely/to-dos.html" target="iframe_b">to-do's</a></li>
+					<li><a href="https://github.com/doqmeat/doqmeat.neocities.org/issues" class="outlink" target="_blank">to-do's</a> - <small>i've moved this to github issues since it's easier for me to keep track of and update!</small></li>
 					<li><a title="img heavy, might have to reload frame" href="sitely/graphics.html" target="iframe_b">graphics collection</a></li>
 					<ul>
 						↳ <a href="sitely/graphics.html#emo" target="iframe_b">emoticons</a>
@@ -138,7 +138,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			</div>
 
 			<div id="site-p" class="paper right">
-				<iframe src="sitely/to-dos.html" name="iframe_b" height="600px" width="489px" style="border:none"></iframe>
+				<iframe src="/sitemap.html" name="iframe_b" height="600px" width="489px" style="border:none"></iframe>
 			</div>
 			<!-- 	site wrapper end div -->
 		</div>
@@ -149,21 +149,19 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 				<div class="left-in">
 					<p>the archives. its dusty in here. </p>
 					<p><mark>some links within these pages might be broken!</mark></p>
-					<li><a href="archive/homepage.html" target="iframe_c">past homepages</a></li>
+					<li><a href="archive/homepage/index.html" target="iframe_c">past homepages</a></li>
 					<ul>
-						↳ <a href="archive/homepage.html#v1" target="iframe_c">v1</a> ↳ <a href="archive/homepage.html#v2" target="iframe_c">v2</a> ↳ <a href="archive/homepage.html#v3" target="iframe_c">v3</a>
+						↳ <a href="archive/homepage/index.html#v1" target="iframe_c">v1</a> ↳ <a href="archive/homepage/index.html#v2" target="iframe_c">v2</a> ↳ <a href="archive/homepage/index.html#v3" target="iframe_c">v3</a>
 					</ul>
-					<li><a href="archive/layouts.html" target="iframe_c">page layouts</a></li>
+					<li><a href="archive/layouts/index.html" target="iframe_c">page layouts</a></li>
+					<li><a href="archive/pages/index.html" target="iframe_c">archived pages</a></li>
 
-					<li><a href="archive/updates.html" target="iframe_c">site updates</a></li>
-
-					<li><a title="no longer updated since i decided to just have everything in the site updates" href="archive/change-log.html" target="iframe_c">change log</a></li>
 					<!-- 		paper left end div -->
 				</div>
 			</div>
 
 			<div id="archive-p" class="paper right">
-				<iframe src="archive/homepage.html" name="iframe_c" height="600px" width="489px" style="border:none"></iframe>
+				<iframe src="archive/homepage/index.html" name="iframe_c" height="600px" width="489px" style="border:none"></iframe>
 
 				<!-- 	paper right end div -->
 			</div>
