--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -291,6 +291,7 @@
 		<li><a href="https://www.xnview.com/en/xnconvert/" target="_blank">xnconvert</a> - bulk img converter software</li>
 		<li><a href="https://saerasoft.com/caesium" target="_blank">caesium image compressor</a> - online img compressor but it also offers an offline software you can download!</li>
 		<li><a href="https://www.piskelapp.com/" target="_blank">pixel art editor</a> - online / offline</li>
+		<li><a href="https://libresprite.github.io/#!/" target="_blank">libresprite</a> - a free and open source fork of <i>aseprite</i></li>
 
 		<center><img src="/!g/div/scissors.gif"></center>
 
